# aneel_dashboard

./: .gitignore  README.md  aneel_requests.ipynb  docker-compose.yml  package-lock.json  pyproject.toml
aneel-backend/: .main.py.swp  DataHandler.py  DataLoader.py  main.py  test.py  utils.py
aneel-backend/helpers/: national_production.py
aneel-frontend/: docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml
aneel-frontend/src/: App.jsx  index.css  mockPlots.js
aneel-frontend/src/components/: OptionBar.jsx  PlotCard.jsx  PlotComponent.css  PlotComponent.jsx  optionBarStyle.css
aneel-frontend/src/styles/: national.css
aneel-frontend/src/views/: Home.jsx  Modalities.jsx  National.jsx  Regional.jsx  Trends.jsx  home.css  modalities.css  national.css  regional.css  trends.css
frontend/: grafico_classe_consumo.json  grafico_empreendimentos_recentes.json  grafico_estado.json  grafico_fonte_energia.json  grafico_modalidade_empreendimento.json  grafico_ranking_municipios.json  grafico_tendencia_potencia.json  index.html  script.js  style.css
