[project]
name = "aneel_dashboard"
version = "0.1.0"
description = "A dashboard with ANEEL's open API data."
readme = "README.md"
requires-python = "==3.12.3"
dependencies = [
    "dash==2.18.0",
    "fastapi[standard]==0.115.12",
    "fastexcel>=0.14.0",
    "ipywidgets>=7.0.0",
    "jupyterlab==4.4.0",
    "pandas==2.2.3",
    "plotly-resampler==0.10.0",
    "polars==1.22.0",
    "pyarrow==20.0.0",
    "requests==2.32.3",
]

[tool.uv.workspace]
members = [
    "dashboard-app",
]
